# carla_ros_gps_tracking

./: car.rviz
gps_record/: CMakeLists.txt
gps_record/include/: gnss_coordinate_convert.h
gps_record/launch/: gps_record.launch  position_saver.launch
gps_record/output/: GPS_ENU copy.txt  GPS_ENU.txt  gps_points.txt  num.txt  path.txt
gps_record/src/: gnss_coordinate_convert.cpp  gps_record.cpp  main.cpp
purepursuit/: CMakeLists.txt  package.xml
purepursuit/include/: gnss_coordinate_convert.h
purepursuit/launch/: pure_pursuit_node.launch  purepursuit.launch  purepursuit_txt.launch
purepursuit/src/: gnss_coordinate_convert.cpp  loc_ang.cpp  pure_pursuit.cpp  purepursuit.cpp  purepursuit_txt.cpp
referenline_points/: CMakeLists.txt
referenline_points/launch/: referenceline_points.launch  send_path.launch
referenline_points/src/: referenceline_points.cpp  send_path.cpp
